--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/04-GestionFamiliaRotulo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gson-2.8.1.jar=lib\\gson\\gson-2.8.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gson-2.8.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
