--- a/datos.properties
+++ b/datos.properties
@@ -1,11 +1,11 @@
-#Tue Jun 27 21:08:35 CEST 2017
+#Fri Jun 30 10:58:47 CEST 2017
 rotulo.fondo_a=255
 rotulo.fondo_v=255
 rotulo.fondo_r=255
 rotulo.frente_a=0
 rotulo.talla=50
 rotulo.frente_v=0
-rotulo.familia=Comic Sans MS
+rotulo.familia=Darlin BTN
 rotulo.texto=Texto de Prueba
 rotulo.negrita=false
 rotulo.frente_r=0
